<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Bela blok</string>
    <string name="title_list_of_matches">List of Matches</string>
    <string name="title_list_of_sets">List of Sets</string>
    <string name="title_list_of_games">List of Games</string>
    <string name="title_list_of_players">List of Players</string>
    <string name="title_new_match">New Match</string>
    <string name="title_match">Match</string>
    <string name="title_player">Player</string>
    <string name="title_sets">Sets</string>
    <string name="title_new_game">New Game</string>
    <string name="title_game">Game</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_match_statistics">Match Statistics</string>
    <string name="title_player_statistics">Player Statistics</string>
    <string name="title_game_points">Game Points</string>
    <string name="title_all_tricks">All Tricks</string>
    <string name="title_bela">Belote</string>
    <string name="title_set_limit">Set Limit</string>
    <string name="title_theme_dark">Dark</string>
    <string name="title_theme_light">Light</string>
    <string name="title_theme_system">System default</string>
    <string name="title_points">Points</string>
    <string name="title_display">Display</string>
    <string name="title_declarations">Declarations</string>
    <string name="title_theme">Theme</string>
    <string name="title_chosen_trump">Chosen Trump</string>
    <string name="title_passed_games">Passed Games</string>
    <string name="title_player_name">Player name</string>
    <string name="title_mi_vi" translatable="false">MI\u0020\u0020VI</string>
    <string name="title_version">Version</string>
    <string name="title_copyright" translatable="false">\u00A9 2011-2020 Damir Mihaljinec</string>
    <string name="title_source_code">Source code</string>
    <string name="title_sets_finished">Sets played</string>
    <string name="title_winning_rate">Winning rate</string>
    <string name="title_auto_delete_quick_match">Auto delete quick match after</string>
    <string name="title_quick_match_valid_2_days">2 days</string>
    <string name="title_quick_match_valid_7_days">7 days</string>
    <string name="title_quick_match_valid_30_days">30 days</string>
    <string name="title_quick_match_valid_always">Never</string>
    <string name="title_reset_declarations">Reset declarations</string>
    <string name="title_backup">Backup</string>
    <string name="title_create">Create</string>
    <string name="title_create_backup">Backup</string>
    <string name="title_restore">Restore</string>
    <string name="title_restore_backup">Restore</string>
    <string name="action_new_match">New Match</string>
    <string name="action_new_quick_match">Quick Match</string>
    <string name="action_new_game">New Game</string>
    <string name="action_new_player">New Player</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_restart">Restart</string>
    <string name="description_operation_failed_player_used_in_match">Cannot delete players that are members of a match</string>
    <string name="description_operation_failed_player_name_invalid">Invalid player name</string>
    <string name="description_operation_failed_player_name_not_unique">Player with name %1$s already exists</string>
    <string name="description_operation_failed_game_not_editable">Operation is allowed only for games that belong to last set in the match</string>
    <string name="description_operation_failed_game_invalid_data">Game points must be equal to sum of team one and team two points:\n%1$d != %2$d (%3$d + %4$d)</string>
    <string name="description_operation_failed_game_invalid_data_by_all_tricks">When all tricks is selected one team must have 0 points:\n%1$d != 0 and %2$d != 0</string>
    <string name="description_operation_failed_game_invalid_data_by_equality">Teams cannot have equal amount of points:\n%1$d == %2$d</string>
    <string name="description_operation_failed_new_match_missing_player">Match requires that four players are selected</string>
    <string name="description_delete_action">Are you sure that you want to delete %1$s? This operation is irreversible.</string>
    <string name="description_delete_action_player">player</string>
    <string name="description_delete_action_all_players">all players</string>
    <string name="description_delete_action_match">match</string>
    <string name="description_delete_action_all_matches">all matches</string>
    <string name="description_delete_action_game">game</string>
    <string name="description_empty_match_list">Click the add button below to create a new match</string>
    <string name="description_empty_player_list">Click the add button below to create a new player</string>
    <string name="description_empty_available_player_list">No available players, add more from the menu</string>
    <string name="description_backup">Application is using database to store user data like players and matches. Once database is exported to a backup file it can be used for migration to another device or to same device in case of application reinstall or device factory reset.</string>
    <string name="description_settings_backup">Create a backup of application database</string>
    <string name="description_settings_restore">Restore application database from a backup</string>
    <string name="state_backup_idle">Create a backup</string>
    <string name="state_backup_idle_detailed">In order to create a backup press button at the bottom of the screen. Process will begin with selecting a location and a file name of a backup. Once done database will be copied to selected location.</string>
    <string name="state_backup_in_progress">Copy database is in progress…</string>
    <string name="state_backup_successful">Backup successfully completed</string>
    <string name="state_backup_successful_detailed">Application needs to restart in order to reload database so please press restart button.</string>
    <string name="state_backup_failed">Backup failed</string>
    <string name="state_backup_failed_detailed">Please check that you have enough free space on selected storage.\nApplication needs to restart in order to reload database so please press restart button and then you can try again.</string>
    <string name="state_restore_idle">Restore</string>
    <string name="state_restore_idle_detailed">In order to restore a database press button at the bottom of the screen. Process will begin with selecting backup file. Once done database from backup file will override current database.</string>
    <string name="state_restore_in_progress">Restoring database is in progress…</string>
    <string name="state_restore_successful">Restore successfully completed</string>
    <string name="state_restore_successful_detailed">Application needs to restart in order to reload database so please press restart button.</string>
    <string name="state_restore_failed">Restore failed</string>
    <string name="state_restore_failed_detailed">Please check that you have enough free space on device.\nApplication needs to restart in order to reload database so please press restart button and then you can try again.</string>
    <string name="state_restore_failed_invalid_backup_file_detailed">Selected bakup file does not contain valid database.\nApplication needs to restart in order to reload database so please press restart button and then you can try again.</string>
    <string name="hint_new_match">Select player</string>
    <string name="tooltip_add_20">Add 20 declarations</string>
    <string name="tooltip_add_50">Add 50 declarations</string>
    <string name="tooltip_win_set">Add enough points to win the set</string>
    <string name="empty" translatable="false" />

    <string name="key_match_id" translatable="false">matchId</string>
    <string name="key_all_matches" translatable="false">allMatches</string>
    <string name="key_deleted_match_id" translatable="false">deletedMatchId</string>
    <string name="key_set_id" translatable="false">setId</string>
    <string name="key_game_id" translatable="false">gameId</string>
    <string name="key_deleted_game_id" translatable="false">deletedGameId</string>
    <string name="key_player_id" translatable="false">playerId</string>
    <string name="key_all_players" translatable="false">allPlayers</string>
    <string name="key_deleted_player_id" translatable="false">deletedPlayerId</string>
    <string name="key_settings_game_points" translatable="false">gamePointsPref</string>
    <string name="key_settings_all_tricks" translatable="false">allTricksPref</string>
    <string name="key_settings_bela_declaration" translatable="false">belaPref</string>
    <string name="key_settings_set_limit" translatable="false">setLimitPref</string>
    <string name="key_settings_theme" translatable="false">themePref</string>
    <string name="key_settings_quick_match_auto_remove" translatable="false">quickMatchAutoRemovePref</string>
    <string name="key_settings_backup" translatable="false">backup</string>
    <string name="key_settings_restore" translatable="false">restore</string>

    <string name="settings_theme_dark" translatable="false">dark</string>
    <string name="settings_theme_light" translatable="false">light</string>
    <string name="settings_theme_system" translatable="false">system</string>
    <string name="settings_quick_match_valid_2_days" translatable="false">two_days</string>
    <string name="settings_quick_match_valid_7_days" translatable="false">seven_days</string>
    <string name="settings_quick_match_valid_30_days" translatable="false">thirty_days</string>
    <string name="settings_quick_match_valid_always" translatable="false">never</string>

    <string name="button_add_20" translatable="false">+20</string>
    <string name="button_add_50" translatable="false">+50</string>

    <string name="link_source_code" translatable="false">https://github.com/dmihaljinec/BelaMiVi</string>
</resources>
