<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/title_points">

        <EditTextPreference
            app:key="@string/key_settings_game_points"
            app:title="@string/title_game_points" />

        <EditTextPreference
            app:key="@string/key_settings_all_tricks"
            app:title="@string/title_all_tricks" />

        <EditTextPreference
            app:key="@string/key_settings_bela_declaration"
            app:title="@string/title_bela" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_match">

        <EditTextPreference
            app:key="@string/key_settings_set_limit"
            app:title="@string/title_set_limit" />

        <ListPreference
            app:key="@string/key_settings_quick_match_auto_remove"
            app:title="@string/title_auto_delete_quick_match"
            app:defaultValue="@string/settings_quick_match_valid_7_days"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/quick_match_option_labels"
            app:entryValues="@array/quick_match_option_values" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_display">

        <ListPreference
            app:key="@string/key_settings_theme"
            app:title="@string/title_theme"
            app:defaultValue="@string/settings_theme_dark"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/theme_option_labels"
            app:entryValues="@array/theme_option_values" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_backup">

        <Preference
            app:key="@string/key_settings_backup"
            app:title="@string/title_create"
            app:summary="@string/description_settings_backup" />

        <Preference
            app:key="@string/key_settings_restore"
            app:title="@string/title_restore"
            app:summary="@string/description_settings_restore" />

    </PreferenceCategory>

</PreferenceScreen>