<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_margin">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/app_name"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/text_large"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/app_logo" />

            <TextView
                android:id="@+id/app_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/app_margin"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:text="@string/title_mi_vi"
                android:textColor="@color/colorLightGreen"
                android:textSize="@dimen/text_large"
                android:background="@drawable/app_logo_bg"
                app:layout_constraintTop_toBottomOf="@id/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/version_label"/>

            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:text="@string/title_version"
                android:textColor="?attr/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/app_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/version" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versionName"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/version_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/copyright" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:layout_marginBottom="@dimen/app_margin"
                android:fontFamily="@font/ubuntu"
                android:text="@string/title_copyright"
                android:textSize="@dimen/text_medium"
                app:layout_constraintTop_toBottomOf="@id/version"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/source_code_label" />

            <TextView
                android:id="@+id/source_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:text="@string/title_source_code"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/source_code" />

            <TextView
                android:id="@+id/source_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:text="@string/link_source_code"
                android:autoLink="web"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
