<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="restore"
            type="bela.mi.vi.android.ui.settings.RestoreFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_margin">

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_backup"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restore_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/app_margin_double"
            android:textColor="@color/backup_state"
            android:textStyle="bold"
            android:enabled="@{restore.failed}"
            android:gravity="start"
            app:textResource="@{restore.restoreState}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/restore_state_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="@dimen/app_margin"
            android:gravity="top|start"
            app:textResource="@{restore.restoreStateMessage}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restore_state"
            app:layout_constraintBottom_toTopOf="@id/restore_backup"/>

        <Button
            android:id="@+id/restore_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_restore"
            android:visibility="@{restore.restoreButtonVisibility}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/restart_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_restart"
            android:visibility="@{restore.restartApplicationButtonVisibility}"
            android:onClick="@{() -> restore.restart(context)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
